2007-09-19 Samuel Abels <http://debain.org>

	* *.py: Backported such that Python 2.2 is now also supported.
	* exscript.py: Load the protocol adapters dynamically, such that 
	SSH related modules are not required when Telnet is used.
	* lib/TerminalConnection/*.py: Further improved prompt recognition.

2007-09-12 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/T*.py: Reworked the telnet adapter such that it
	supports negotiation. This means that a connection should now automatically
	choose a script-friendly terminal type. (e.g. one that uses no color control
	characters).
	* lib/Exscript/Loop.py: Fixed a bug that some operations would not work when
	accessing the iterator variable in the body of a loop tag.
	* lib/Exscript/Loop.py: Added support for "while" and "until" loops.
	* lib/Exscript/Extract.py: Added support for "into" keyword.
	* lib/WorkQueue/Job.py: Use friendlier thread names.
	* lib/Exscript/*.py: Fix: In several cases accessing a variable could fail.

2007-09-10 Samuel Abels <http://debain.org>

	* lib/Exscript/Loop.py: Loops can now iterate over multiple lists at once.
	* lib/TerminalConnection/: Added the humble beginnings of an SSH adapter
	based on pexpect.
	* Relased 0.9.8.

2007-09-07 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/T*.py: Further improved prompt recognition.
	Correctly filter out telnet control characters.

2007-08-01 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/T*.py: Improved prompt recognition. (#4)

2007-07-17 Samuel Abels <http://debain.org>

	* lib/Exscript/*.py: Check regular expression syntax at compile time.

2007-07-13 Samuel Abels <http://debain.org>

	* exscript.py: Add support for selecting the protocol using -p or
	--protocol.
	* exscript.py: Add support for URL formatted hostnames. (#2)

2007-07-11 Samuel Abels <http://debain.org>

	* lib/WorkQueue/*.py, lib/TerminalActions/*.py: Be more strict with
	the locking. This should not make a difference with the current