@@ -1,3 +1,17 @@
+# Copyright (C) 2007 Samuel Abels, http://debain.org
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License version 2, as
+# published by the Free Software Foundation.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 from Token import Token
 from Term  import Term
 
@@ -61,8 +75,8 @@ class ExpressionNode(Token):
         elif self.op == 'not':
             return not self.rgt.value()
 
-        # There are three types of values: Integer, boolean, and lists.
-        # We have to make sure that empty lists do not cause an error.
+        # There are only two types of values: Regular expressions and lists.
+        # We also have to make sure that empty lists do not cause an error.
         lft = self.lft.value()
         if type(lft) == type([]) and len(lft) > 0:
             lft = lft[0]
