@@ -1,3 +1,17 @@
+# Copyright (C) 2007 Samuel Abels, http://debain.org
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License version 2, as
+# published by the Free Software Foundation.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 import Exscript
 from Token      import Token
 from Expression import Expression
@@ -15,7 +29,7 @@ class IfCondition(Token):
         if not parser.next_if('close_curly_bracket'):
             token = parser.token()
             error = 'Unexpected %s at end of if-condition: %s' % token
-            parent.syntax_error(self, error)
+            scope.syntax_error(self, error)
 
         # Body of the if block.
         while parser.next_if('newline') or parser.next_if('whitespace'):
